<resources>
    <string name="app_name">K234112EApp</string>
    <string name="str_welcome">Welcome to K234112E</string>
    <string name="str_say_hello">Hello K234112E</string>
    <string name="atr_clickme_say_hello">Say Hello</string>
    <string name="str_login_system" translatable="false">Login System</string>
    <string name="str_user_name" translatable="false">Username</string>
    <string name="str_hint_username" translatable="false">Enter your username</string>
    <string name="str_password" translatable="false">Password</string>
    <string name="str_hint_password" translatable="false">Enter your password</string>
    <string name="str_login" translatable="false">Login</string>
    <string name="str_exit" translatable="false">Exit</string>
    <string name="str_login_success" translatable="false">Login successfully!!!</string>
    <string name="str_login_failed" translatable="false">Login failed!!!</string>
    <string name="str_mc" translatable="false">MC</string>
    <string name="str_mr" translatable="false">MR</string>
    <string name="str_mplus" translatable="false">M+</string>
    <string name="str_mminus" translatable="false">M-</string>
    <string name="str_ms" translatable="false">Ms</string>
    <string name="str_m" translatable="false">M</string>
    <string name="str_open_calculator" translatable="false">Open Calculator App</string>
    <string name="str_error" translatable="false">Error</string>
    <string name="str_memory_deleted" translatable="false">Memory deleted</string>
    <string name="str_memory_saved" translatable="false">Memory saved</string>
    <string name="str_memory_added" translatable="false">Memory added</string>
    <string name="str_memory_subtracted" translatable="false">Memory subtracted</string>
    <!-- Câu này có chứa biến (số bộ nhớ) nên mình dùng %1$s để chèn chữ vào sau -->
    <string name="str_memory_saving" translatable="false">Memory saving: %1$s</string>
    <string name="str_save_login_info" translatable="false">Save login information</string>
    <string name="str_login_role" translatable="false">Login Role</string>
    <string name="str_role_admin" translatable="false">Administrator</string>
    <string name="str_role_employee" translatable="false">Employee</string>
    <string name="str_select_role" translatable="false">Please select the login role</string>
    <string name="str_confirm_exit_title" translatable="false">Confirm Exit</string>
    <string name="str_confirm_exit" translatable="false">Do you want to exit?</string>
    <string name="str_yes" translatable="false">Yes</string>
    <string name="str_no" translatable="false">No</string>
    <string name="str_employee_id" translatable="false">Employee ID:</string>
    <string name="str_employee_name" translatable="false">Employee Name:</string>
    <string name="str_phone_number" translatable="false">Phone Number:</string>
    <string name="str_save" translatable="false">Save</string>
    <string name="str_delete" translatable="false">Delete</string>
    <string name="str_save_success" translatable="false">Saved successfully!</string>
    <string name="str_update_success" translatable="false">Updated successfully!</string>
    <string name="str_empty_error" translatable="false">Please fill in all fields!</string>
    <string name="str_confirm_delete_msg" translatable="false">Do you want to delete this employee?</string>
    <string name="str_select_to_delete" translatable="false">Please select an employee to delete!</string>
    <string name="str_delete_success" translatable="false">Deleted successfully!</string>
    <string name="str_confirm_delete_title" translatable="false">Confirm Delete</string>
    <string name="str_department" translatable="false">Department:</string>
    <string name="str_list_employee" translatable="false">List Employee:</string>
    <string name="str_birthplace" translatable="false">Birth Place:</string>
    <string name="str_require_department" translatable="false">Please select a department!</string>
    <string name="str_order_report" translatable="false">Order Report</string>
    <string name="str_from_date" translatable="false">From Date:</string>
    <string name="str_to_date" translatable="false">To Date:</string>
    <string name="str_open_order_mng" translatable="false">Open Order Management</string>
    <string name="str_order_status_all" translatable="false">All Status</string>
    <string name="str_order_status_completed" translatable="false">Completed</string>
    <string name="str_order_status_unpay" translatable="false">Not Payment</string>
    <string name="str_order_status_log" translatable="false">On Logistic</string>
    <string name="str_order_status_complain" translatable="false">Customer Complain</string>
    <string name="str_open_category">Open Category Screen</string>
    <string name="str_open_product_view">Open Product Page</string>
    <string name="str_system_management">System Management</string>
    <string name="str_utilities_and_tools"><![CDATA[Utilities & Tools]]></string>
    <string name="str_exit_app">Exit App</string>
    <string name="str_category">New Category</string>
    <string name="str_category_statistic">Statistic</string>
    <string name="str_category_id">Category ID:</string>
    <string name="str_category_name">Category Name:</string>
    <string name="str_category_description">Category Description</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_time">Time</string>
    <string name="str_message_body">Message Body:</string>
    <string name="str_open_sms_sypeware">Open SMS Sypeware</string>
    <string name="str_number_button">Number Button</string>
    <string name="str_create_button">Create</string>
    <string name="str_open_multi_threading_demo">Open Multi Threading Demo</string>
    <string name="str_number_of_products">Number of Product</string>
    <string name="str_download_product">Download Product</string>
    <string name="str_download_done">Download Done</string>
    <string name="str_open_multi_threading_object">Open Multi Threading Object</string>
    <string name="str_open_paper_screen">Open Paper Screen</string>
    <string name="str_play_audio_1">Play Audio 1</string>
    <string name="str_play_audio_2">Play Audio 2</string>
    <string name="str_uel">University of Economics and Law</string>
    <string name="str_open_font_and_music">Open Font and Music</string>
    <string name="str_open_my_uel">Open My UEL</string>
    <string name="str_insert_contact">Insert Contact</string>
    <string name="str_contact_id_label">Contact Id:</string>
    <string name="str_contact_id_hint">Contact Id here</string>
    <string name="str_name_label">Name:</string>
    <string name="str_name_hint">Name here</string>
    <string name="str_email_label">Email:</string>
    <string name="str_email_hint">Email here</string>
    <string name="str_phone_label">Phone:</string>
    <string name="str_phone_hint">Phone here</string>
    <string name="str_open_firebase_contact">Open Firebase Contact</string>
    <string name="str_detail_contact">Detail Contact</string>
    <string name="str_update">Update</string>
    <string name="str_back">Back</string>
    <string name="str_open_ecommerce_firebase">E-Commerce Management</string>
    <string name="str_category_mng">Category Management</string>
    <string name="str_customer_mng">Customer Management</string>
    <string name="str_employee_mng">Employee Management</string>
    <string name="str_order_mng">Order Management</string>
    <string name="str_product_mng">Product Management</string>
    <string-array name="array_birthplace">
        <item>An Giang</item>
        <item>Bà Rịa - Vũng Tàu</item>
        <item>Bắc Giang</item>
        <item>Bắc Kạn</item>
        <item>Bạc Liêu</item>
        <item>Bắc Ninh</item>
        <item>Bến Tre</item>
        <item>Bình Định</item>
        <item>Bình Dương</item>
        <item>Bình Phước</item>
        <item>Bình Thuận</item>
        <item>Cà Mau</item>
        <item>Cần Thơ</item>
        <item>Cao Bằng</item>
        <item>Đà Nẵng</item>
        <item>Đắk Lắk</item>
        <item>Đắk Nông</item>
        <item>Điện Biên</item>
        <item>Đồng Nai</item>
        <item>Đồng Tháp</item>
        <item>Gia Lai</item>
        <item>Hà Giang</item>
        <item>Hà Nam</item>
        <item>Hà Nội</item>
        <item>Hà Tĩnh</item>
        <item>Hải Dương</item>
        <item>Hải Phòng</item>
        <item>Hậu Giang</item>
        <item>Hòa Bình</item>
        <item>Huế</item>
        <item>Hưng Yên</item>
        <item>Khánh Hòa</item>
        <item>Kiên Giang</item>
        <item>Kon Tum</item>
        <item>Lai Châu</item>
        <item>Lâm Đồng</item>
        <item>Lạng Sơn</item>
        <item>Lào Cai</item>
        <item>Long An</item>
        <item>Nam Định</item>
        <item>Nghệ An</item>
        <item>Ninh Bình</item>
        <item>Ninh Thuận</item>
        <item>Phú Thọ</item>
        <item>Phú Yên</item>
        <item>Quảng Bình</item>
        <item>Quảng Nam</item>
        <item>Quảng Ngãi</item>
        <item>Quảng Ninh</item>
        <item>Quảng Trị</item>
        <item>Sóc Trăng</item>
        <item>Sơn La</item>
        <item>Tây Ninh</item>
        <item>Thái Bình</item>
        <item>Thái Nguyên</item>
        <item>Thanh Hóa</item>
        <item>Tiền Giang</item>
        <item>TP. Hồ Chí Minh</item>
        <item>Trà Vinh</item>
        <item>Tuyên Quang</item>
        <item>Vĩnh Long</item>
        <item>Vĩnh Phúc</item>
        <item>Yên Bái</item>
    </string-array>


</resources>